Setup custom CI/CD for ESO submodule

--- a/.github/workflows/ci_devtests.yml
+++ b/.github/workflows/ci_devtests.yml
@@ -5,11 +5,13 @@ on:
   push:
     branches:
     - main
+    - develop
     tags:
     - '*'
   pull_request:
     branches:
     - main
+    - develop
   schedule:
     # run every Monday at 5am UTC
     - cron: '0 5 * * 1'
