--- a/tox.ini
+++ b/tox.ini
@@ -68,12 +68,12 @@ commands =
     devdeps: pip install -U --pre --no-deps --extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple numpy
 
     python -m pip freeze
-    !cov: pytest --pyargs astroquery {toxinidir}/docs {env:PYTEST_ARGS} {posargs}
-    cov:  pytest --pyargs astroquery {toxinidir}/docs --cov astroquery --cov-config={toxinidir}/setup.cfg {env:PYTEST_ARGS} {posargs}
+    !cov: pytest --pyargs astroquery.eso {toxinidir}/docs/eso {env:PYTEST_ARGS} {posargs}
+    cov:  pytest --pyargs astroquery.eso {toxinidir}/docs/eso --cov astroquery.eso --cov-config={toxinidir}/setup.cfg {env:PYTEST_ARGS} {posargs}
     # For remote tests, we re-run the failures to filter out at least some of the flaky ones.
     # We use a second pytest run with --last-failed as opposed to --rerun in order to rerun the
     # failed ones at the end rather than right away.
-    online: pytest --pyargs astroquery {toxinidir}/docs {env:PYTEST_ARGS_2} {posargs}
+    online: pytest --pyargs astroquery.eso {toxinidir}/docs/eso {env:PYTEST_ARGS_2} {posargs}
     cov: coverage xml -o {toxinidir}/coverage.xml
 
 pip_pre =
